ffmpeg: check for unconnected outputs

Fixes e.g.:

ffmpeg -f lavfi -i testsrc -f lavfi -i testsrc -filter_complex "[0:v][1:v]psnr[out]" -f null none

Fixes ticket #6323.

(cherry picked from commit 974ee16d6a71c31d0b5db4f139a40831c2f45776)